# minieigen

./: CMakeLists.txt  setup.py
doc/: Doxyfile.extra.in
src/: CMakeLists.txt  __init__.py  common.hpp  converters.hpp  expose-boxes.cpp  expose-complex.cpp  expose-converters.cpp  expose-matrices.cpp  expose-quaternion.cpp  expose-sparse.cpp  expose-stl-vectors.cpp  expose-triplets.cpp  expose-vectors.cpp  expose.hpp  minieigen.cpp  stlVisitor.hpp  visitors.hpp
src/double-conversion/: bignum-dtoa.cc  bignum.cc  cached-powers.cc  double-conversion.cc  fast-dtoa.cc  fixed-dtoa.cc  strtod.cc  utils.h
tests/: TestEigen.py
